# uuid

./: CMakeLists.txt  README.md  uuid.vix  vix.json
examples/: v4_bytes.cpp  v4_many.cpp  v4_string.cpp
include/uuid/: uuid.hpp
tests/: test_basic.cpp
